--- a/CatlikeTutorials/Packages/manifest.json
+++ b/CatlikeTutorials/Packages/manifest.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "com.unity.feature.development": "1.0.1",
+    "com.unity.render-pipelines.universal": "14.0.8",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
